# ht6-2026

./: .gitignore  .npmrc  PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/mobile/: .env.example  App.tsx  PHOTO_QUALITY.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/plugins/: withAndroidCleartextTraffic.js  withAndroidNinja.js
scripts/: dev.mjs  phone-hotspot.mjs  phone-tailscale.mjs  setup.mjs  smoke-network.mjs  smoke-production.mjs  test-db.mjs
services/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/api/exposure_api/: __init__.py  analysis.py  auth.py  curation.py  database.py  generative.py  main.py  models.py  providers.py  renderer.py  speech.py  sync_models.py
services/api/scripts/: migrate_supabase_to_mongodb.py  prove_generative_blend.py  smoke_gemini.py  smoke_mongodb.py
services/api/tests/: conftest.py  test_analysis_api.py  test_analysis_cache.py  test_auth.py  test_coach_models.py  test_curation.py  test_gemini_provider.py  test_generative.py  test_generative_api.py  test_mongodb_sync_api.py  test_rendering.py  test_semantic_analysis.py  test_smoke_gemini.py  test_speech_api.py
supabase/: config.toml
supabase/migrations/: 20260718040000_exposure_schema.sql  20260718150000_camera_preferences.sql  20260718160000_collective_adjustments.sql  20260718170000_storage_original_delete.sql  20260718180000_analysis_signals.sql  20260718190000_manual_style_profiles.sql  20260719020000_auth0_ownership.sql
supabase/tests/: 001_exposure_schema_test.sql
(+74 files in other folders)
