[project]
name = "exposure-api"
version = "0.1.0"
description = "Deterministic photo analysis, Gemini orchestration, and non-destructive rendering for Exposure"
requires-python = ">=3.12"
dependencies = [
  "auth0-fastapi-api==1.0.0b7",
  "fastapi>=0.116,<1",
  "google-genai>=2.0,<3",
  "httpx>=0.28,<1",
  "numpy>=2.2,<3",
  "pillow>=12,<13",
  "pillow-heif>=1.4.0",
  "pymongo>=4.14,<5",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx2>=1,<3",
  "pytest>=8.4,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exposure_api"]
